2016-09-02 2e480eb [RELEASE] Release of ext_testing 0.1.0 (Nicole Cordes)
2016-09-01 d59c7ba [FEATURE] Switch mocks to prophecies in BlogController (Nicole Cordes)
2016-09-01 7af4fd3 [FEATURE] Add test to ensure isEnvironmentInBackendMode call (Nicole Cordes)
2016-09-01 9d9e98c [TASK] Add BlogControllerTest skeleton (Nicole Cordes)
2016-09-01 09de5dc [FEATURE] Add important logic to BlogController (Nicole Cordes)
2016-09-01 24f8d05 [FEATURE] Add dataProvider for validateDeniesInvalidDates (Nicole Cordes)
2016-09-01 24a8195 [FEATURE] Add dataProvider for validateAcceptsDateInThePast (Nicole Cordes)
2016-09-01 0478d9e [TASK] Be more restrict in validateDeniesDateInTheFuture test (Nicole Cordes)
2016-09-01 1670b2c [FEATURE] Add invalid unit test in DateBeforeValidatorTest (Nicole Cordes)
2016-09-01 600c464 [FEATURE] Add unit test for valid value in DateBeforeValidatorTest (Nicole Cordes)
2016-09-01 0093474 [TASK] Add DateBeforeValidatorTest skeleton (Nicole Cordes)
2016-09-01 7a40dd3 [FEATURE] Add DateBeforeValidator (Nicole Cordes)
2016-09-01 af6e690 [FEATURE] Remove generated tests (Nicole Cordes)
2016-08-29 2235027 [TASK] Extbase Domain Modelling (Nicole Cordes)